langkit/sustained/src/gpr_parser.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef void* gpr_base_node;
typedef uint8_t gpr_bool;
/*
 * Array types incomplete declarations
 */

        

typedef struct gpr_gpr_node_array_record *gpr_gpr_node_array;
        



    typedef struct {
            gpr_base_node node;
            gpr_internal_entity_info info;
    } gpr_base_entity;
/*
 * Kind-specific AST node primitives
 */

/* All these primitives return their result through an OUT parameter.  They
   return a boolean telling whether the operation was successful (it can fail
   if the node does not have the proper type, for instance).  When an AST node
   is returned, its ref-count is left as-is.  */

        



/*
 * Return the syntactic parent for this node. Return null for the root node.
 */
extern int gpr_gpr_node_parent(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * Return an array that contains the lexical parents, this node included iff
 * ``with_self`` is True. Nearer parents are first in the list.
 */
extern int gpr_gpr_node_parents(
    gpr_base_entity *node,

        
        gpr_bool
        with_self,

    gpr_gpr_node_array *value_p
);
        



/*

 */
extern int gpr_attribute_decl_f_attr_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``gpr_others_designator``, ``gpr_string_literal_at``
 */
extern int gpr_attribute_decl_f_attr_index(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``gpr_builtin_function_call``, ``gpr_string_literal_at``, ``gpr_terms``,
 * ``gpr_variable_reference``
 */
extern int gpr_attribute_decl_f_expr(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_attribute_reference_f_attribute_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``gpr_others_designator``, ``gpr_string_literal``
 */
extern int gpr_attribute_reference_f_attribute_index(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_case_construction_f_var_ref(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_case_construction_f_items(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``gpr_others_designator``, ``gpr_string_literal``
 */
extern int gpr_case_item_f_choice(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``gpr_attribute_decl``, ``gpr_case_construction``, ``gpr_empty_decl``,
 * ``gpr_variable_decl``
 */
extern int gpr_case_item_f_decls(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_compilation_unit_f_project(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``gpr_identifier``,
 * ``gpr_prefix``
 */
extern int gpr_prefix_f_prefix(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_prefix_f_suffix(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_package_decl_f_pkg_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``gpr_package_renaming``,
 * ``gpr_package_spec``
 */
extern int gpr_package_decl_f_pkg_spec(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_package_spec_f_extension(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``gpr_attribute_decl``, ``gpr_case_construction``, ``gpr_empty_decl``,
 * ``gpr_variable_decl``
 */
extern int gpr_package_spec_f_decls(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_package_spec_f_end_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_project_f_context_clauses(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_project_f_project_decl(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_project_declaration_f_qualifier(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``gpr_identifier``,
 * ``gpr_prefix``
 */
extern int gpr_project_declaration_f_project_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_project_declaration_f_extension(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);